[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.31"
config = "0.13.3"
hyper = "0.14.27"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls","postgres","uuid","chrono","migrate"]}
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
