[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.31"
config = "0.13.3"
hyper = "0.14.27"
reqwest = "0.11.22"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls","postgres","uuid","chrono","migrate"]}
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
tower-request-id = "0.2.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
